# A-Maze-ing-42-qcorsius_llobet

./: .gitignore  Makefile  README.md  config.txt  mazegen-0.1.0-py3-none-any.whl  pyproject.toml
mazegen/: README.md  __init__.py  a_maze_ing.py  app.py  config.py  position.py  utils.py
mazegen/enums/: __init__.py  color.py  limits.py  maze_object.py
mazegen/input/: __init__.py  input.py  menus.py
mazegen/maze/: __init__.py  cell.py  solver.py  visualizer.py
src/: config.py  main.py  position.py  utils.py
src/assets/: title.txt
src/enums/: __init__.py  color.py
src/input/: __init__.py  input.py  menus.py
src/labyrinth/: __init__.py  cell.py
src/maze/: __init__.py  visualizer.py
src/ui/: __init__.py  window.py  window_manager.py
visualizer/: visualizer.py
