[project]
name = "mazegen"
dynamic = ["version"]

[tool.poetry]
version = "0.1.0"
package-mode = true
authors = [
	"qcorsius <qcorsius@student.42lyon.fr>",
	"llobet <llobet@student.42lyon.fr>"
]
readme = "README.md"

packages = [{include = "mazegen"}]

[tool.poetry.scripts]
a-maze-ing = "mazegen.app:run"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pydantic = "^2.12.5"
flake8 = "^7.3.0"
mypy = "^1.19.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
